# Mimic

./: .gitignore  CMakeLists.txt  README.md
GCP_Media/: Models_Load_Stress_Test.txt  RenderEngine_Design_FlowDiagram.drawio  Thumbs.db  Video_Diagrams.psd
GCP_Media/Video_Diagrams/GPU_Explaination/: Thumbs.db
GCP_Media/Video_Diagrams/IBR_Theory/: Thumbs.db
GCP_Media/Video_Diagrams/PBR Theory/BRDF/Diffuse/: Thumbs.db
GCP_Media/Video_Diagrams/PBR Theory/BRDF/Specular/: Thumbs.db
GCP_Media/Video_Diagrams/PBR_Theory/: Thumbs.db
GCP_Media/Video_Diagrams/PBR_Theory/BRDF/Specular/: Thumbs.db
GCP_Media/Video_Diagrams/PBR_Theory/Reflectance_Equation/: Thumbs.db
GCP_Media/Video_Diagrams/Qualitative_Data/PBR_vs_BlinnPhong/: Thumbs.db
GCP_Media/Video_Diagrams/Qualitative_Data/Shadow_Map_Resolutions/: Thumbs.db
GCP_Media/Video_Diagrams/Quantitive_Data/: Blinn_Phong_SPIR-V_Output.txt  Blinn_Phong_vs_PBR_SPIR_V_Data.txt  PBR_SPIR-V_Output.txt
GCP_Media/Video_Diagrams/Quantitive_Data/Model_Loading/: Thumbs.db
GCP_Media/Video_Diagrams/Quantitive_Data/Shadow_Mapping/Multiple_Direct_Lights/: Thumbs.db
GCP_Media/Video_Diagrams/Shadow_Mapping_Theory/: Thumbs.db
GEP_Report/: Entity_Component_System.dia  Entity_Component_System.dia.autosave  Entity_Component_System.drawio  Thumbs.db
SDKs/x64/lib/: glew32.lib  libglew32.lib
assets/models/Mushrooms1_Obj/Mushrooms1_Obj/: Mushrooms1.mtl  Thumbs.db
assets/models/Normal_Rock_Quad/: untitled.mtl
assets/models/Normal_Rock_Sphere/: Thumbs.db  normal_rock_sphere.mtl
assets/models/Sphere/: sphere.mtl
assets/models/Sphere/Bricks084_1K-PNG/: Bricks084_1K-PNG.mtlx  Bricks084_1K-PNG.usdc
assets/models/Sphere/Chip001_1K-PNG/: Chip001_1K-PNG.mtlx  Chip001_1K-PNG.usdc
assets/models/Sphere/Tiles078_1K-PNG/: Tiles078_1K-PNG.mtlx  Tiles078_1K-PNG.usdc
assets/models/Sphere/Tiles093_1K-PNG/: Tiles093_1K-PNG.mtlx  Tiles093_1K-PNG.usdc
assets/models/cube/: cube.mtl
assets/shaders/: BRDFConvolutionShader.glsl  BasicShader.glsl  BlinnPhongShader.glsl  CubeMapShader.glsl  CubeMaptoConvolutedCubeMap.glsl  DepthMapDebug.glsl  DepthMapShader.glsl  EnvironmentCubeMapShader.glsl  EquirectangularToCubemapShader.glsl  FlatColourShader.glsl  HDRCubeMapShader.glsl  PBRShader.glsl  PhongShader.glsl  PreFilteredCubeMapShader.glsl  Texture.glsl
src/dmtk/: main.cpp
src/dmtk/additional-files/models/cube/: cube.mtl
src/dmtk/additional-files/models/curuthers/: Thumbs.db
src/dmtk/additional-files/shaders/: FragmentShader.txt  VertexShader.txt
src/dmtk/assets/models/Mushrooms1_Obj/Mushrooms1_Obj/: Mushrooms1.mtl
src/dmtk/assets/shaders/: FragmentShader.txt
src/mimic/: Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  FragmentShader.txt  GameObject.h  Renderer.cpp  Renderer.h  StackAllocator.h  VertexShader.txt
src/mimic/lowlevelsystems/: Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  CubeMap.cpp  CubeMap.h  Environment.cpp  Environment.h  GameObject.cpp  GameObject.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Mimic.h  MimicCore.cpp  MimicCore.h  ModelRenderer.cpp  ModelRenderer.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h  Window.cpp  Window.h
src/mimic/mimic_audio/: AudioClip.cpp  AudioClip.h  AudioSource.cpp  AudioSource.h
src/mimic/mimic_engine/: AudioSource.cpp  AudioSource.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Environment.cpp  Environment.h  GameObject.cpp  GameObject.h  Gui.cpp  Gui.h  InputHandler.cpp  InputHandler.h  Light.cpp  Light.h  Material.cpp  Material.h  Mimic.h  MimicCore.cpp  MimicCore.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Rigidbody.cpp  Rigidbody.h  Shader.cpp  Shader.h  ShadowMapper.cpp  ShadowMapper.h  Texture.cpp  Texture.h
src/mimic/mimic_gui/: gui.cpp  gui.h
src/mimic/mimic_physics/: Algorithms.h  Collider.cpp  Collider.h  Collision.h  Quaternion.cpp  Quaternion.h  Rigidbody.cpp  Rigidbody.h  Simulation.h
src/mimic/mimic_render/: Camera.cpp  Camera.h  CubeMap.cpp  CubeMap.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowMapper.cpp  ShadowMapper.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h
src/mimic/mimic_utility/: FileLoader.cpp  FileLoader.h  Logger.cpp  Logger.h  Math.h  PerformanceCounter.cpp  PerformanceCounter.h
src/mimic/renderengine/: Camera.cpp  Camera.h  CubeMap.cpp  CubeMap.h  CubemapTexture.cpp  CubemapTexture.h  Framebuffer.cpp  Framebuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  RayTracer.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  ShadowMapper.cpp  ShadowMapper.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h
src/mimic/shaders/: FragmentShader.txt  VertexShader.txt
src/mimic/utility/: FileLoader.cpp  FileLoader.h  Logger.cpp  Logger.h  PerformanceCounter.cpp  PerformanceCounter.h
